@@ -425,6 +425,7 @@ Michael McFarland                   sidlon@yahoo.com
 Michael McLagan                     mmclagan@invlogic.com
 Michael Mol                         mikemol@gmail.com
 Michael Piefel                      piefel@informatik.hu-berlin.de
+Michael Price                       mprice@atl.lmco.com
 Michael Steffens                    michael.steffens@s.netic.de
 Michael Stummvoll                   michael@stummi.org
 Michael Stutz                       stutz@dsl.org
